@@ -110,30 +110,6 @@ OPTIONS_SINGLE = {
     'video_deinterlace':     'deinterlace',
 }
 
-def flatten(x):
-    """flatten(sequence) -> list
-
-    Returns a single, flat list which contains all elements retrieved
-    from the sequence and all recursively contained sub-sequences
-    (iterables).
-
-    Examples:
-    >>> [1, 2, [3,4], (5,6)]
-    [1, 2, [3, 4], (5, 6)]
-    >>> flatten([[[1,2,3], (42,None)], [4,5], [6], 7, MyVector(8,9,10)])
-    [1, 2, 3, 42, None, 4, 5, 6, 7, 8, 9, 10]"""
-
-    # This code was taken from http://kogs-www.informatik.uni-hamburg.de/~meine/python_tricks
-    # Similar code was also found on python mailing lists.
-
-    result = []
-    for el in x:
-        if hasattr(el, "__iter__") and not isinstance(el, basestring):
-            result.extend(flatten(el))
-        else:
-            result.append(el)
-    return result
-
 class MonitorLogger:
 
     def __init__(self, section, logpath=None, debug_level=0):
@@ -286,7 +262,7 @@ class Monitor:
 
         command += [ url_out ]
         command_item = {'pre': precommand,
-            'main': flatten(command),
+            'main': sjutils.utils.flatten_list(command),
             'post': postcommand,
             'logger': logger,
             'section': section, }
