@@ -9,7 +9,7 @@ Standards-Version: 3.8.3
 
 Package: sl2d
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}, sjconf1 (>= 1.2.0), python-sjutils
+Depends: ${misc:Depends}, ${python:Depends}, sjconf1 (>= 1.2.0), python-sjutils (>= 1.14)
 XB-Python-Version: ${python:Versions}
 Recommends: sjconf-sl2d (>= 0.1)
 Description: streaming loader 2 daemon
